--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,40 @@ h1{
     width: 60px;
 }
 /* /NAVBAR */
+
+
+ /*  MAIN CONTENT  */
+
+.main_content{
+    width: 70vw;
+    height: 80vh;
+
+    margin: 50px auto;
+
+    background-color: white;
+}
+
+
+/* ADDER */
+.main_content .adder{
+    padding: 20px 50px;
+    border-bottom:3px solid rgb(246, 248, 249);
+}
+
+.main_content .adder .btn{
+    padding: 8px 15px;
+    border-radius: 4px;
+    border: 1px solid grey;
+    background-color: white;
+    color: grey;
+}
+
+.main_content .adder .btn:hover{
+    color: white;
+    background-color: rgb(71, 173, 241);
+    border: 1px solid  rgb(71, 173, 241);
+}
+
+/* /ADDER */
+
+ /* /MAIN CONTENT  */
